# voice-chat-bot

./: .gitignore
client/: package-lock.json
client/src/: App.jsx  ChatBot.jsx  VoiceChat.jsx
client/src/styles/: ChatBot.css  VoiceChat.css
server/: booking_state.json  main.py  pyproject.toml
server/data/: hotel_data.py  prompt_details.py
