[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "google-generativeai>=0.5.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "numpy<=2.2",
    "torch",
    "python-multipart>=0.0.20",
    "ffmpeg-python>=0.2.0",
    "whisper>=1.1.10",
]
